fixed navbar spacing

--- a/css/home.css
+++ b/css/home.css
@@ -28,9 +28,11 @@ body {
     padding: 17px;
 }
 
-.logo {
+.logo{
     font-size: 25px;
+    margin-left: 30px;
     color: #ffffff;
+    font-weight: 200;
 }
 
 .navbar-buttons {
@@ -52,6 +54,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 30px;
 }
 
 .login-button button {
@@ -302,7 +305,6 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: 1280px;
     margin: 0 auto;
     padding: 50px;
 }
